[package]
name = "hyperlocal"
version = "0.4.1"
authors = ["softprops <d.tangren@gmail.com>"]
description = "Hyper bindings for unix domain sockets"
homepage = "https://github.com/softprops/hyperlocal"
repository = "https://github.com/softprops/hyperlocal"
keywords = ["hyper", "unix", "sockets", "http"]
license = "MIT"
readme = "README.md"

[dependencies]
futures = "0.1"
hex = "0.2"
hyper = {git = "https://github.com/ianoc/hyper.git", rev = "5a765529802c7cddb516f170b0a95ae9f008e81e"}
tokio-core = "0.1"
tokio = "0.1"
tokio-io = "0.1"
tokio-service = "0.1"
tokio-uds = {git = "https://github.com/tokio-rs/tokio-uds.git", rev = "60c7cecacd67f3f8bc0345d2d582cec5e36090d9"}

